--- a/src/app/Components/my-boards/my-boards.component.html
+++ b/src/app/Components/my-boards/my-boards.component.html
@@ -11,8 +11,11 @@
       <mat-card [hidden]="loadingBoardsIManage" *ngFor="let board of boardsIManage">
         <mat-card-title>{{board.title}}</mat-card-title>
         <mat-card-actions>
-            <button mat-raised-button color="primary" [routerLink]="['/board', board.boardId]" class="primary-color-hover"><span class="fa fa-edit"></span> נהל לוח</button>
-            <div class="button" (click)="openDeleteBoardDialog(board.boardId)"><span class="fa fa-trash"></span></div>
+            <button mat-raised-button color="primary" [routerLink]="['/board', board.boardId]" class="primary-color-hover"><span class="fa fa-wrench"></span> נהל לוח</button>
+            <div class="actions-container">
+              <div class="button" (click)="openDeleteBoardDialog(board.boardId)"><span class="fa fa-trash"></span></div>
+              <div class="button" (click)="openEditBoardDialog(board)"><span class="fa fa-edit"></span></div>
+            </div>
           </mat-card-actions>
       </mat-card>
     </div>
