--- a/src/app/Components/my-boards/my-boards.component.css
+++ b/src/app/Components/my-boards/my-boards.component.css
@@ -50,3 +50,10 @@ button {
 .actions-container .button {
   margin-right: 5px;
 }
+
+.board-category-img {
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+  margin-bottom: 5px;
+}
